# privbayes-benchmark

./: .gitignore  LICENSE  README.md  breast_cancer_privbayes_benchmark_article.tex  pyproject.toml  requirements.txt  test_setup.py
docs/: PROJECT_STRUCTURE.md  RESULTS_AND_PLOTS.md  WORKFLOWS.md
journal_submission/: conference_101719.tex  references.bib
schemas/: README.md  adult_public_schema.json  breast_cancer_public_schema.json
scripts/: README.md  augment_results_json_with_downstream.py  comprehensive_comparison.py  plot_utility_privacy_from_json.py  prepare_breast_cancer_dataset.py  prepare_schema_from_csv.py  recompute_qi_linkage.py  run_paper_experiments.py  validate_metrics_json.py  validate_schema_json.py  verify_install.py
scripts/internal/: _smoke_dpmm_adapter.py  augment_results_json_with_downstream.py
src/pbbench/: __init__.py  enhanced_metrics.py  privacy_audit.py
src/pbbench/variants/: __init__.py  pb_datasynthesizer.py  pb_enhanced.py  pb_synthcity.py
